--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "API Debugger",
     "Debug API",
     "Debug",
-    "Bebug API",
+    "Debug API",
+    "REST",
     "REST API",
     "Debug REST API"
   ],
