--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "API Debugger",
     "Debug API",
     "Debug",
-    "Debug API",
+    "Debugging API",
     "REST",
     "REST API",
     "Debug REST API"
